[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/textures/player/one_ss.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/Explosion-duplicate frames.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/player/player_ship_hit.png" type="Texture" id=3]
[ext_resource path="res://scenes/fire.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/player.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/Laser Shot.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 29, 42 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 29, 0, 29, 42 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "exploding",
"speed": 14.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 15.0

[sub_resource type="CapsuleShape2D" id=19]
radius = 3.93091

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 1.25, 7 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )

[node name="Reactor" type="Node2D" parent="."]

[node name="Fire" parent="Reactor" instance=ExtResource( 4 )]
position = Vector2( -11.818, -6.364 )

[node name="Fire2" parent="Reactor" instance=ExtResource( 4 )]
position = Vector2( -11.818, 8.182 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 18 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 2, -10 )
rotation = -0.959931
shape = SubResource( 19 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 1, 12 )
rotation = 0.959931
shape = SubResource( 19 )

[node name="FireContainer" type="Node" parent="."]

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.0

[node name="IFrame" type="Timer" parent="."]
one_shot = true

[node name="NoseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoseArea"]
position = Vector2( 16.75, 0 )
shape = SubResource( 20 )

[connection signal="timeout" from="IFrame" to="." method="_on_i_frame_timeout"]
[connection signal="body_entered" from="NoseArea" to="." method="_on_nose_area_body_entered"]
[connection signal="body_exited" from="NoseArea" to="." method="_on_nose_area_body_exited"]
